--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,234 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+/* user#index styles */
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+.users-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.users-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  list-style-type: none;
+  gap: 20px;
+}
+
+.user-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.user-link {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  text-decoration: none;
+  color: #000;
+}
+
+.user-info-container {
+  padding: 0 30px;
+  width: 60%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #000;
+  gap: 20px;
+}
+
+.user-name {
+  width: 50%;
+}
+
+.user-post-num {
+  width: 50%;
+  text-align: right;
+}
+
+.user-img {
+  width: 9%;
+  height: 100px;
+  border: 1px solid #000;
+}
+
+@media (max-width: 768px) {
+  .user-link {
+    width: 100%;
+  }
+
+  .user-post-num {
+    font-size: 10px;
+  }
+
+  .user-name {
+    font-size: 18px;
+  }
+
+  .user-img {
+    width: 20%;
+    height: 70px;
+  }
+
+  .user-info-container {
+    padding: 0 10px;
+  }
+
+  .users-list {
+    padding-left: 0;
+  }
+}
+
+/* user#show styles */
+.specific-user-container {
+  margin: 50px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
+}
+
+.user-info-part {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 40px;
+}
+
+.specific-user-info-container {
+  display: flex;
+  width: 59%;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000;
+  padding: 23px;
+}
+
+.bio-container {
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  padding: 10px 40px;
+  width: 70%;
+  border: 1px solid #000;
+}
+
+.specific-user-img {
+  width: 8%;
+  border: 1px solid #000;
+  height: 100px;
+}
+
+.specific-user-posts {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.user-post {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  border: 1px solid #000;
+  padding: 10px 40px;
+  gap: 20px;
+}
+
+.user-post-counters {
+  display: flex;
+  align-self: flex-end;
+}
+
+.see-all-btn {
+  width: 113px;
+  padding: 8px;
+  background: none;
+}
+
+.bio-title {
+  font-size: 18px;
+}
+
+@media (max-width: 768px) {
+  .specific-user-img {
+    width: 22%;
+    border: 1px solid #000;
+    height: 83px;
+  }
+
+  .specific-user-posts {
+    width: 92%;
+  }
+
+  .bio-container {
+    padding: 10px 15px;
+    width: 92%;
+  }
+
+  .user-post {
+    padding: 10px 15px;
+  }
+}
+
+/* post#index styles */
+.all-posts-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 50px 0;
+  gap: 20px;
+}
+
+.post-comments-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  padding: 10px 40px;
+  border: 1px solid #000;
+}
+
+.all-comments-link {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  text-decoration: none;
+  color: #000;
+  gap: 20px;
+}
+
+/* post#show */
+.specific-post-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+  margin: 50px 0;
+}
