--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -217,7 +217,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  align-items: center;
+  align-items: start;
   text-decoration: none;
   color: #000;
   gap: 20px;
