--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,6 +5,11 @@
   margin: 0;
 }
 
+body {
+  background-color: #ebf0f3;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 .users-container {
   margin-top: 50px;
   display: flex;
@@ -45,23 +50,27 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #000;
   gap: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px 0 #888;
 }
 
 .user-name {
-  width: 50%;
+  width: 40%;
 }
 
 .user-post-num {
-  width: 50%;
+  width: 60%;
   text-align: right;
 }
 
 .user-img {
   width: 9%;
   height: 100px;
-  border: 1px solid #000;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px 0 #888;
 }
 
 @media (max-width: 768px) {
@@ -115,8 +124,10 @@
   width: 59%;
   justify-content: center;
   align-items: center;
-  border: 1px solid #000;
   padding: 23px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px 0 #888;
 }
 
 .bio-container {
@@ -127,13 +138,17 @@
   align-items: start;
   padding: 10px 40px;
   width: 70%;
-  border: 1px solid #000;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px 0 #888;
 }
 
 .specific-user-img {
   width: 8%;
-  border: 1px solid #000;
   height: 100px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px 0 #888;
 }
 
 .specific-user-posts {
@@ -151,9 +166,11 @@
   justify-content: center;
   align-items: flex-start;
   width: 100%;
-  border: 1px solid #000;
   padding: 10px 40px;
   gap: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px 0 #888;
 }
 
 .user-post-counters {
@@ -164,7 +181,10 @@
 .see-all-btn {
   width: 113px;
   padding: 8px;
-  background: none;
+  border: none;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px 0 #888;
 }
 
 .bio-title {
@@ -210,7 +230,9 @@
   align-items: flex-start;
   width: 100%;
   padding: 10px 40px;
-  border: 1px solid #000;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 5px 5px 5px 0 #888;
 }
 
 .all-comments-link {
