Add  spec/features/ folder

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<h1>Shows a specific user</h1>
 <div class = specific-user-container>
     <div class = "user-info-part">
         <img src = <%=@user.photo%> alt = "User photo" class = "specific-user-img">
