Add app/views/devise/ folder

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Shows a specific post for a specific user</h1>
+<h1 class = "page-title">Shows a specific post for a specific user</h1>
 <div class = "specific-post-container">
     <div class = "specific-user-posts">
                 <div class = "user-post">
