--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
   </head>
 
   <body>
-    <div class="flash-msg">
-      <% flash.each do |name,msg| %>
-        <%=msg%>
-      <%end%>
-    </div>
+    <%#<div class="flash-msg">
+      <%#<% flash.each do |name,msg| %>
+        <%#<%=msg%>
+      <%#<%end%>
+    <%#</div><#%>
     <%= yield %>
   </body>
 </html>
