--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Lists all posts for a specific user</h1>
+<h1 class = "page-title">Lists all posts for a specific user</h1>
 <div class="all-posts-container">
     <div class = "user-info-part">
         <img src = <%=@user.photo%> alt = "User photo" class = "specific-user-img">
