--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Lists all users</h1>
+<h1 class = "page-title">Lists all users</h1>
 <div class="users-container">
     <ul class = "users-list">
         <%@users.each do |user|%>
@@ -13,4 +13,7 @@
             <li>
         <%end%>
     </ul>
+    <% if user_signed_in? %>
+        <%= link_to "Log Out", sign_out_user_path, method: :delete %>
+    <%end%>
 </div>
