--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
 
     <div class="field">
       <%= f.label :photo %><br />
-      <%= f.text_field :bio, autofocus: true %>
+      <%= f.text_field :photo, autofocus: true, autocomplete: "photo" %>
     </div>
 
     <div class="field">
