--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label :photo %><br />
-    <%= f.text_field :photo, autofocus: true %>
+    <%= f.text_field :photo, autofocus: true, autocomplete: "photo" %>
   </div>
 
   <div class="field">
