--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -277,7 +277,9 @@ body {
 }
 
 /* LOG IN PAGE */
-.log-in-page, .forgot-page, .change-password-page{
+.log-in-page,
+.forgot-page,
+.change-password-page {
   width: 100%;
   display: flex;
   justify-content: center;
