Update  app/views/posts/show.html.erb file

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,25 @@
-<h1 class = "page-title">Shows a specific post for a specific user</h1>
+<h1 class = "page-title">Show a specific post</h1>
 <div class = "specific-post-container">
     <div class = "specific-user-posts">
                 <div class = "user-post">
                     <div class ="user-post-counters">Comments: <%=@post.comments_counter%>, Likes: <%=@post.likes_counter%></div>
                     <h3 class ="user-post-title"><%=@post.title%> by <%=@user.name%></h3>
                     <p class ="user-post-text"><%=@post.text%></p>
+                    <%if @post.author == current_user || can?(:destroy, @post)%>
+                        <%= button_to 'Delete', user_post_path(user_id: @post.author_id, id: @post.id), method: :delete, data: {confirm: 'Are you sure you want to delete this post ?'} %>
+                    <% end %>
                 </div>
                 <div class = "post-comments-container">
                     <%@post.comments.each do |comment|%>
-                        <p><%=@user.name%>: <%=comment.text%></p>
+                        <p><%=comment.user.name%>: <%=comment.text%></p>
+                        <% if comment.user == current_user || can?(:destroy, comment)%>
+                            <%= button_to 'Delete Comment', user_post_comment_path(user_id: comment.user_id, post_id: comment.post_id, id: comment.id), method: :delete, data: { confirm: 'Are you sure you want to delete this comment?' }, class: "delete-comment-btn"%>
+                        <% end %>
                     <%end%>
                 </div>
+    </div>
+    <div class = "comment-like-btn-container">
+        <%= link_to "Add comment", new_user_post_comment_path(@user, @post), class: "add-comment-btn"  %>
+        <%= link_to "Add Like", new_user_post_like_path(@user, @post), class: "add-like-btn"  %>
     </div>
 </div>
