--- a/app/views/likes/new.html.erb
+++ b/app/views/likes/new.html.erb
@@ -1,7 +1,9 @@
-<h1>Likes #new Page</h1>
+<div class = "new-like-page">
+    <h1>Likes #new Page</h1>
 
-<%= form_for :like, url: user_post_likes_path(@user, @post) do |f| %>
-    <div>
-        <%= f.submit%>
-    </div>
-<%end%>
+    <%= form_for :like, url: user_post_likes_path(@user, @post) do |f| %>
+        <div>
+            <%= f.submit%>
+        </div>
+    <%end%>
+</div>
