--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
             </div>
             <div class = "post-comments-container">
                 <%post.five_recent_comments.each do |comment|%>
-                    <p><%=@user.name%>: <%=comment.text%></p>
+                    <p><%=comment.user.name%>: <%=comment.text%></p>
                 <%end%>
             </div>
         </a>
